force-app/main/default/objects/MP_Subscription__c/MP_Subscription__c.object-meta.xml
<CustomObject>
    <label>MP Subscription</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>