force-app/main/default/objects/MP_Subscription__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MP Subscriptions</relationshipLabel>
    <relationshipName>MP_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>