force-app/main/default/objects/MP_Subscription__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MP Subscriptions</relationshipLabel>
    <relationshipName>MP_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>