force-app/main/default/objects/MP_Subscription__c/fields/Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>