force-app/main/default/objects/MP_Subscription__c/fields/MP_Auto_Recurring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>MP_Auto_Recurring_Frequency__c</fullName>
    <label>MP Auto Recurring Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>