force-app/main/default/objects/MP_Subscription__c/fields/MP_Auto_Recurring_Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>MP_Auto_Recurring_Frequency_Type__c</fullName>
    <label>MP Auto Recurring Frequency Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>