force-app/main/default/objects/MP_Subscription__c/fields/MP_Auto_Recurring_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MP_Auto_Recurring_Start_Date__c</fullName>
    <label>MP Auto Recurring Start Date</label>
    <length>40</length>
    <type>Text</type>
</CustomField>