force-app/main/default/objects/MP_Subscription__c/fields/MP_Auto_Recurring_Start_Date_DT__c.field-meta.xml
<CustomField>
    <fullName>MP_Auto_Recurring_Start_Date_DT__c</fullName>
    <label>MP Auto Recurring Start Date DT</label>
    <type>DateTime</type>
</CustomField>