force-app/main/default/objects/MP_Subscription__c/fields/MP_Collector_ID__c.field-meta.xml
<CustomField>
    <fullName>MP_Collector_ID__c</fullName>
    <label>MP Collector ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>