force-app/main/default/objects/MP_Subscription__c/fields/MP_Currency__c.field-meta.xml
<CustomField>
    <fullName>MP_Currency__c</fullName>
    <label>MP Currency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>