force-app/main/default/objects/MP_Subscription__c/fields/MP_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>MP_Date_Created__c</fullName>
    <label>MP Date Created</label>
    <length>40</length>
    <type>Text</type>
</CustomField>