force-app/main/default/objects/MP_Subscription__c/fields/MP_Last_Modified_DT__c.field-meta.xml
<CustomField>
    <fullName>MP_Last_Modified_DT__c</fullName>
    <label>MP Last Modified DT</label>
    <type>DateTime</type>
</CustomField>