force-app/main/default/objects/MP_Subscription__c/fields/MP_Next_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>MP_Next_Installment_Date__c</fullName>
    <label>MP Next Installment Date</label>
    <length>40</length>
    <type>Text</type>
</CustomField>