force-app/main/default/objects/MP_Subscription__c/fields/MP_Next_Installment_Date_DT__c.field-meta.xml
<CustomField>
    <fullName>MP_Next_Installment_Date_DT__c</fullName>
    <label>MP Next Installment Date DT</label>
    <type>Date</type>
</CustomField>