force-app/main/default/objects/MP_Subscription__c/fields/MP_Status__c.field-meta.xml
<CustomField>
    <fullName>MP_Status__c</fullName>
    <label>MP Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>