force-app/main/default/objects/MP_Subscription__c/fields/MP_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>MP_Subscription_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>MP Subscription ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>