force-app/main/default/objects/MP_Subscription__c/fields/MP_Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>MP_Subscription_Plan__c</fullName>
    <label>MP Subscription Plan</label>
    <referenceTo>MP_Subscription_Plan__c</referenceTo>
    <relationshipLabel>MP Subscriptions</relationshipLabel>
    <relationshipName>MP_Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>