force-app/main/default/objects/MP_Subscription__c/fields/MP_Summary_Charged_Amount__c.field-meta.xml
<CustomField>
    <fullName>MP_Summary_Charged_Amount__c</fullName>
    <label>MP Summary Charged Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>