force-app/main/default/objects/MP_Subscription__c/fields/MP_Summary_Charged_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MP_Summary_Charged_Quantity__c</fullName>
    <label>MP Summary Charged Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>