force-app/main/default/objects/MP_Subscription__c/fields/MP_Summary_Last_Charged_Date__c.field-meta.xml
<CustomField>
    <fullName>MP_Summary_Last_Charged_Date__c</fullName>
    <label>MP Summary Last Charged Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>