force-app/main/default/objects/MP_Subscription__c/fields/MP_Summary_Last_Charged_Date_DT__c.field-meta.xml
<CustomField>
    <fullName>MP_Summary_Last_Charged_Date_DT__c</fullName>
    <label>MP Summary Last Charged Date DT</label>
    <type>DateTime</type>
</CustomField>