force-app/main/default/objects/MP_Subscription__c/fields/MP_Summary_Sempahore__c.field-meta.xml
<CustomField>
    <fullName>MP_Summary_Sempahore__c</fullName>
    <label>MP Summary Sempahore</label>
    <length>40</length>
    <type>Text</type>
</CustomField>