force-app/main/default/objects/MP_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>MP_Auto_Recurring_Amount__c</columns>
    <columns>MP_Collector_ID__c</columns>
    <columns>MP_Subscription_Plan__c</columns>
    <columns>MP_Payment_Method_ID__c</columns>
    <columns>MP_Last_Charged_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>