force-app/main/default/objects/MP_Subscription__c/listViews/Campa_a_Maratea.listView-meta.xml
<ListView>
    <fullName>Campa_a_Maratea</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>MP_Subscription_Plan__c</columns>
    <columns>MP_Last_Modified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MP_Collector_ID__c</field>
        <operation>equals</operation>
        <value>579681070</value>
    </filters>
    <label>Campaña Maratea</label>
</ListView>