force-app/main/default/objects/MP_Subscription__c/listViews/Donaciones_MP.listView-meta.xml
<ListView>
    <fullName>Donaciones_MP</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>MP_Subscription_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MP_Collector_ID__c</field>
        <operation>equals</operation>
        <value>461443036</value>
    </filters>
    <label>Donaciones MP</label>
</ListView>